src/objects/POcommitment__c.object
<CustomObject>
    <fields>
        <fullName>ETLDate__c</fullName>
        <label>ETL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETLJobID__c</fullName>
        <label>ETL Job ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FunctionalCurrency__c</fullName>
        <label>Functional Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <label>OU ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncError__c</fullName>
        <label>Oracle Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POAmountBilled__c</fullName>
        <label>PO Amount Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POCurrency__c</fullName>
        <label>PO Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PODistribution__c</fullName>
        <label>PO Distribution</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POExchangeRate__c</fullName>
        <label>PO Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>POHeader__c</referenceTo>
        <relationshipLabel>PO Commitments</relationshipLabel>
        <relationshipName>PO_Commitments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POLineAmount__c</fullName>
        <label>PO Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLineStatus__c</fullName>
        <label>PO Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POLine__c</fullName>
        <label>PO Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCurrency__c</fullName>
        <label>Project Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PO Commitments</relationshipLabel>
        <relationshipName>PO_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTaskNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>PO Commitments</relationshipLabel>
        <relationshipName>PO_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StagedDate__c</fullName>
        <label>Staged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <label>Supplier ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>Supplier Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierNumber__c</fullName>
        <label>Supplier Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PO Commitment</label>
    <nameField>
        <displayFormat>POC-{0}</displayFormat>
        <label>PO Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>